tests/ui/bad_array3.stderr
error: expected a string, but found `,`
 --> $DIR/bad_array3.rs:6:13
  |
6 |     many = [,]
  |             ^
